AM_CPPFLAGS = -I$(top_srcdir)/include -I$(top_srcdir)/include/netlink
lib_LTLIBRARIES=libnetlink.la
libnetlink_la_SOURCES=dnet_ntop.c inet_proto.c ipx_pton.c ll_addr.c ll_proto.c rt_names.c dnet_pton.c ipx_ntop.c libnetlink.c ll_map.c ll_types.c utils.c
libnetlink_la_CFLAGS=$(AM_CFLAGS)


CLEANFILES = *~ 
